--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,4 +1,10 @@
 {
+    "comments": {
+        // symbol used for single line comment.
+        "lineComment": "//",
+        // symbols used for start and end a block comment.
+        "blockComment": [ "/*", "*/" ]
+    },
     // symbols used as brackets
     "brackets": [
         ["{", "}"],
